test/errors/type_mismatch_struct.haste
const Vec2 = struct { x: int; y: int; };
const Vec3 = struct { x: int; y: int; z: int; };
const v: Vec2 = Vec3{ x: 1, y: 2, z: 3 };
